"Changes on password update fail and rebase changes"