@@ -37,8 +37,16 @@ public class UserProfileService {
     private final AWSS3Service awss3Service;
     private final EmailSenderService emailSenderService;
 
-    private final static Set<String> VOLUNTEERINGINTEREST = ImmutableSet.of("WEBSITE","MARKETING","STUDENTWELFARE",
-            "ALUMNIWELFARE","ADMIN", "EVENTS");
+    // TODO change it with Set.of() when we build with java 9 or latest
+    private final static Set<String> VOLUNTEERINGINTEREST =
+            ImmutableSet
+                .<String>builder()
+                    .add("WEBSITE")
+                    .add("MARKETING")
+                    .add("STUDENTWELFARE")
+                    .add("ALUMNIWELFARE")
+                    .add("ADMIN")
+                .build();
 
     public UserProfile getUserProfile(String userId) {
         User user = userService.getUserById(userId);
